# pypackage_dev_setup

./: .gitlab-ci.yml  .pre-commit-config.yaml  README.md  bitbucket-pipelines.yml  clone_and_run.sh  init.sh  pyproject.toml
tests/: test_example.py
