[tool.poetry]
name = "template"
version = "0.1.0"
description = ""
authors = ["Philipp Burkhardt <philipp.burkhardt@esforin.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"  # or "class", "module", "package", "session"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
